--- a/index.html
+++ b/index.html
@@ -1,24 +1,65 @@
-<!doctype html>
-<html lang="ko">
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo-dark.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nuvio Note - Your thoughts, beautifully organized</title>
-  <meta name="description" content="Nuvio Note는 로컬 우선(Local-first) 노트 앱입니다. 당신의 생각은 당신의 것입니다." />
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nuvio Note | Transformed into Deep Insights</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      }
+    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Dancing+Script:wght@600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: #F8F7F2;
+        color: #333333;
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+      .dark body {
+        background-color: #121212;
+        color: #E2E8F0;
+      }
+      .font-logo { font-family: 'Dancing Script', cursive; }
+      .font-serif-elegant { font-family: 'Playfair Display', serif; }
+      
+      /* Subtle paper grain texture */
+      .paper-texture {
+        position: relative;
+      }
+      .paper-texture::before {
+        content: "";
+        position: absolute;
+        top: 0; left: 0; width: 100%; height: 100%;
+        opacity: 0.03;
+        pointer-events: none;
+        background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
+        transition: opacity 0.3s ease;
+      }
+      .dark .paper-texture::before {
+        opacity: 0.015;
+        filter: invert(1);
+      }
+    </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
 </head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <body>
+    <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
-
 </html>
