--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Dancing+Script:wght@600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Dancing+Script:wght@600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Outfit:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/png" href="/favicon.png" />
   <style>
@@ -36,6 +36,10 @@
 
     .font-serif-elegant {
       font-family: 'Playfair Display', serif;
+    }
+
+    .font-geometric {
+      font-family: 'Outfit', sans-serif;
     }
 
     /* Subtle paper grain texture */
