fix: mobile UI layout, routing, and download restriction
- Fix 404 on sub-routes by generating static HTML files
- Prevent mobile button truncation causing layout issues
- Optimize button layout for ultra-small screens (275px)
- Restrict mobile downloads with alert message

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       background-color: #F8F7F2;
       color: #333333;
       transition: background-color 0.3s ease, color 0.3s ease;
+      overflow-x: hidden;
     }
 
     .dark body {
@@ -75,7 +76,7 @@
   }
 }
 </script>
-  <link rel="stylesheet" href="/index.css">
+
 </head>
 
 <body>
